# ICLabel-Dataset

./: pyproject.toml
src/examples/: example.py
src/iclabel_dataset/: icldata.py
