[project]
name = "iclabel-dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwenevere Frank"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py (>=3.15.0,<4.0.0)",
    "future (>=1.0.0,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "iclabel_dataset", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
